--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </nav>
+    <!-- navbar end -->
     <section class="container">
         <div class="half-width">
             <span class="title1">
@@ -24,8 +25,8 @@
                 <h1> With Food Network</h1>
             </span>
             <p class="about-me">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-            <br>
-            <br>
+             <br>
+             <br>
             <a class="btn" href="#">Order Food</a>
         </div>
         <div class="half-width"> <img src="img/img1.png" alt="">
@@ -71,8 +72,8 @@
     </section>
     <section class="container3">
         <div>
-             <h1 class="title1">700k</h1>
-             <p class='about-me'>Youtube Subscribers</p>
+            <h1 class="title1">700k</h1>
+            <p class='about-me'>Youtube Subscribers</p>
         </div>
         <div>
             <h1 class="title1">1.2m</h1>
