--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <h1> With Food Network</h1>
             </span>
             <p class="about-me">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-             <br>
-             <br>
-            <a class="btn" href="#">Order Food</a>
+            <br>
+            <br>
+            <a class="btn" target="_blank" href="https://github.com/rifatsaown">Order Food</a>
         </div>
         <div class="half-width"> <img src="img/img1.png" alt="">
         </div>
@@ -37,37 +37,38 @@
         </div>
         <div class="half-width">
             <h1 class='title1'>About Me</h1>
-            <p class='about-me'>Lnsectetur, adipisicing elit. Consectetur magnam, labore deleniti eius quibusdam nam
-                itaque doloribus, quidem eveniet repudiandae repellendus quo dicta laboriosam tempora laborum atque
-                exercitationem ex sed sit. Officiis distinctio id sequi fugit aliquam, dolorum itaque deleniti?</p>
+            <p class='about-me'>I'm Rifat from USA , a baby web developer. I'm a learner in programming hero web develop
+                course (reset batch) . My dream to be a professional programmer.</p>
             <br>
             <br>
-            <a class="btn" href="#">Contuct Me</a>
+            <a class="btn" target="_blank" href="https://www.linkedin.com/in/rifatsaown/">Contuct Me</a>
         </div>
     </section>
     <section>
         <div class="my-recipies">
             <h1 class='title1'>My recipies</h1>
-            <p class='about-me'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam consequatur
-                officia exercitationem impedit reiciendis</p>
+            <p class='about-me'>Here is a small list of my recipes. You can find more recipes on our recipes section, to
+                view that toggle on the recipes icon above . You can also contact us for more information</p>
         </div>
     </section>
     <section class=container>
         <div class='card'>
             <img src="img/food1.jpg" alt="">
             <h1 class='title1'>Jimmy Dean</h1>
-            <p class='about-me'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi nostrum
-                voluptates aspernatur illum ea.</p>
+            <p>Toggle on the recipes icon above . You can also contact us for more information.Toggle on the recipes
+                icon above . You can also contact us for more information</p>
         </div>
-        <div class='card'><img src="img/food1.jpg" alt="">
-            <h1 class='title1'>Jimmy Dean</h1>
-            <p class='about-me'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi nostrum
-                voluptates aspernatur illum ea.</p>
+        <div class='card'>
+            <img src="img/food2.png" alt="">
+            <h1 class='title1'>Mexican Sup</h1>
+            <p>Toggle on the recipes icon above . You can also contact us for more information.Toggle on the recipes
+                icon above . You can also contact us for more information</p>
         </div>
-        <div class="card"><img src="img/food1.jpg" alt="">
-            <h1 class='title1'>Jimmy Dean</h1>
-            <p class='about-me'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi nostrum
-                voluptates aspernatur illum ea.</p>
+        <div class="card">
+            <img src="img/food3.jpg" alt="">
+            <h1 class='title1'>Beef Vegetable</h1>
+            <p>Toggle on the recipes icon above . You can also contact us for more information.Toggle on the recipes
+                icon above . You can also contact us for more information</p>
         </div>
     </section>
     <section class="container3">
@@ -85,8 +86,16 @@
         </div>
     </section>
     <footer>
-        <h1><span class="primary-color">FOOD</span> <span class="white-color"> NETWORK</span></h1>
-        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        <div>
+            <h1><span class="primary-color">FOOD</span> <span class="white-color"> NETWORK</span></h1>
+            <br>
+            <p class='text-bottom'>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+        <div class="footer">
+            <hr>
+            <input class="btn2" type="text" placeholder="Input your Email"> <a href="#" class="btn2 btn-end">join!</a>
+            <p class='text-bottom'>All Rights Reserved ©Rifat Hossen</p>
+        </div>
     </footer>
 
 </body>
