--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
+    <!-- nav-bar -->
     <nav>
         <a href="">Home</a>
         <a href="">Recipes</a>
         <a href="">About</a>
         <a href="">Contact</a>
     </nav>
-    <!-- navbar end -->
+    <!-- info -->
     <section class="container">
         <div class="half-width">
             <span class="title1">
@@ -29,9 +30,11 @@
             <br>
             <a class="btn" target="_blank" href="https://github.com/rifatsaown">Order Food</a>
         </div>
-        <div class="half-width"> <img src="img/img1.png" alt="">
+        <div class="half-width"> 
+            <img src="img/img1.png" alt="">
         </div>
     </section>
+    <!-- about-me -->
     <section class="container2">
         <div class="half-width half-width-person "> <img src="img/img2.png" alt="" class="person-img">
         </div>
@@ -44,6 +47,7 @@
             <a class="btn" target="_blank" href="https://www.linkedin.com/in/rifatsaown/">Contuct Me</a>
         </div>
     </section>
+    <!-- My Recipes -->
     <section>
         <div class="my-recipies">
             <h1 class='title1'>My recipies</h1>
@@ -51,6 +55,7 @@
                 view that toggle on the recipes icon above . You can also contact us for more information</p>
         </div>
     </section>
+    <!-- Recipes card -->
     <section class=container>
         <div class='card'>
             <img src="img/food1.jpg" alt="">
@@ -71,6 +76,7 @@
                 icon above . You can also contact us for more information</p>
         </div>
     </section>
+    <!-- Social Networks -->
     <section class="container3">
         <div>
             <h1 class="title1">700k</h1>
@@ -85,6 +91,7 @@
             <p class='about-me'>Dribbble Shot Likes</p>
         </div>
     </section>
+    <!-- Footer Part -->
     <footer>
         <div>
             <h1><span class="primary-color">FOOD</span> <span class="white-color"> NETWORK</span></h1>
